Add Role Control

--- a/Auth0/Views/Account/EmailVerification.cshtml
+++ b/Auth0/Views/Account/EmailVerification.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Email Verification";
+    ViewData["Title"] = "Email Verification Required!";
 }
 <h1>@ViewData["Title"]</h1>
 
